/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package src;

/**
 *
 * @author
 * fvega
 */
public interface DiagramObject {
    public String draw();
}
