/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package src;

/**
 *
 * @author
 * fvega
 */
public class JavaFileParser {
   
}
