/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package src;

import java.util.List;
import src.classObjects.ClassObject;

/**
 *
 * @author
 * fvega
 */
public class PumlWriter {
    public void writePuml(List<ClassObject> classes) {
        
    }
}
