/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package src.relationObjects;

import src.DiagramObject;

/**
 *
 * @author
 * fvega
 */
public abstract class ClassRelation implements DiagramObject{
    protected String relation;
    protected boolean drawable;
}
